<resources>
    <string name="app_name">P9A11y</string>
    <string name="cas_3_formulaire_de_connexion">Cas 3: Formulaire de connexion</string>
    <string name="cas_2_carte_de_suggestion_de_recettes">Cas 2 : Carte de suggestion de recettes</string>
    <string name="cas_1_bouton_d_ajout_au_panier">Cas 1 : Bouton d\'ajout au panier</string>
    <string name="cas_1">Cas 1 :</string>
    <string name="impossible_d_avoir_une_quantit_n_gative">Impossible d\'avoir une quantité négative</string>
    <string name="cas_2">Cas 2 :</string>
    <string name="cd_ajouter_aux_favoris">Ajouter aux favoris</string>
    <string name="ajouter">Ajouter</string>
    <string name="demo_cookie_text">Cookies au chocolat</string>
    <string name="recette_ajout_au_panier">Recette ajoutée au panier</string>
    <string name="cas_3">Cas 3 :</string>
    <string name="pseudo">Pseudonyme :</string>
    <string name="validate">Valider</string>
    <string name="demo_product_name">Nom du produit</string>
    <string name="cas_1_increase_button_content_description">Bouton pour augmenter la quantité du produit</string>
    <string name="cas_1_decrease_button_content_description">Bouton pour réduire la quantité du produit</string>
    <string name="quantity_description">La quantité actuelle est de %d</string>
    <string name="favourite_add_action">Ajouter aux favoris</string>
    <string name="favourite_remove_action">Retirer des favoris</string>
    <string name="favourite_added">Ajouté aux favoris</string>
    <string name="favourite_removed">Retiré des favoris</string>
    <string name="recipe_added_to_basket">Recette ajoutée au panier</string>
    <string name="navigation_to_recipe">Navigation vers la recette</string>
    <string name="valid_entry">Saisie valide. Vous pouvez continuer.</string>
    <string name="no_valid_entry">Saisie invalide. Veuillez entrer au moins trois caractères.</string>
    <string name="pseudo_entry">Entrez votre pseudonyme</string>
    <string name="pseudo_must_have_3_letters">Le pseudonyme doit contenir au moins trois caractères.</string>
    <string name="pseudo_valid">Pseudonyme valide !</string>



</resources>